--- a/index.html
+++ b/index.html
@@ -2,54 +2,51 @@
 <html lang="en">
 
 <head>
+    <title>Gem In Eye</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GemInEye - Home</title>
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
-    <script src="/js/script.js"></script>
+    <script src="/js/side_navbar.js" defer></script>
 </head>
 
 <body>
     <header>
+        <!-- Section haute du header -->
         <div id="top-container">
-            <div id="logo-container">
-                <div id="logo-img">
-                    <a href="index.html">
-                        <img id="logo" src="img/logo.png">
+            <div id="top-logo-content">
+                <div id="top-logo-img">
+                    <!-- Lien a changer quand on changera en index.php -->
+                    <a href="/index.html">
+                        <img id="top-logo" src="/img/logo.png" alt="logo_Gem_In_Eye">
                     </a>
                 </div>
             </div>
-
-
             <div id="header-container">
-                <div class="header-line"></div>
                 <div id="header-title">
                     <h1>Gem In Eye</h1>
                 </div>
-                <div class="header-line"></div>
                 <div id="header-login">
-                    <!-- TODO : PHP : Sign in + Log in, si pas connecté -->
-                    <div>Sign in</div>
-                    <div>Log in</div>
-                    <!-- TODO : PHP : Log out, si connecté -->
+                    <!-- TODO : PHP : afficher Sign in + Log in, si pas connecté -->
+                    <button class="log-btn">Sign in</button>
+                    <button class="log-btn">Log in</button>
+                    <!-- TODO : PHP : afficher Log out, si connecté -->
+                    <!-- <button class="log-btn">Log out</button> -->
                 </div>
-                <div class="header-line"></div>
                 <div id="header-cart">
                     <div id="header-cart-content">
                         <div id="cart-img-div">
-                            <img id="cart-img" src="img/cart.png">
+                            <img id="cart-img" src="/img/cart.png" alt="cart_image">
                             <div id="cart-nbr"><!-- nombre d'element dans le panier --></div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
         </div>
+        <!-- Section basse du header -->
         <div id="nav-container">
             <nav id="head-nav">
                 <ul id="head-list">
-                    <li class="li-line"></li>
                     <li class="li-elem"><a href="">Home</a></li>
                     <li class="li-line"></li>
                     <li class="li-elem"><a href="">Products</a></li>
@@ -57,22 +54,40 @@
                     <li class="li-elem"><a href="">About</a></li>
                     <li class="li-line"></li>
                     <li class="li-elem"><a href="">Contact</a></li>
-                    <li class="li-line"></li>
                 </ul>
             </nav>
         </div>
-        <!-- TODO : Main nav bar -->
-
     </header>
 
-    <!-- TODO : Left side nav bar -->
+    <main>
+        <!-- Barre de navigation gauche -->
+        <nav id="side-nav">
+            <a href="">Home</a>
+            <button class="dropdown-btn">Products</button>
+            <div class="dropdown-container">
+                <a href="">Geodes</a>
+                <a href="">Rough Gemstones</a>
+                <a href="">Crystals</a>
+            </div>
+            <a href="">About</a>
+            <a href="">Contact</a>
+        </nav>
+        <!-- Contenu principal de la page -->
+        <div id="page-content">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, odio repellendus. Aut, doloribus? Laudantium error atque obcaecati consequuntur quibusdam doloremque consectetur quas nemo nisi! Magnam adipisci alias odio totam ab.
+        </div>
+    </main>
 
     <footer>
-
-        <!-- TODO : Footer -->
-
+        <ul id="footer-list">
+            <li class="footer-list-item"><a href="">Home</a></li>
+            <li class="footer-list-item"><a href="">About</a></li>
+            <li class="footer-list-item"><a href="">Contact</a></li>
+            <li class="footer-list-item"><a href="">Privacy Policy</a></li>
+        </ul>
+        <div id="footer-logo-img">
+            <img id="footer-logo" src="/img/logo.png" alt="logo_Gem_In_Eye">
+        </div>
+        <div id="copyright">Gem In Eye © 2022</div>
     </footer>
-
 </body>
-
-</html>
