--- a/commons/footer.html
+++ b/commons/footer.html
@@ -1,12 +1,16 @@
 <footer>
-    <ul id='footer-list'>
-        <li class='footer-list-item'><a href='/index.php'>Home</a></li>
-        <li class='footer-list-item'><a href=''>About</a></li>
-        <li class='footer-list-item'><a href='/contact.php'>Contact</a></li>
-        <li class='footer-list-item'><a href=''>Privacy Policy</a></li>
-    </ul>
-    <div id='footer-logo-img'>
-        <img id='footer-logo' src='/img/logo.png' alt='logo_Gem_In_Eye'>
+    <div id="footer-container">
+        <ul id='footer-list'>
+            <li class='footer-list-item'><a href='/index.php'>Home</a></li>
+            <li class='footer-list-item'><a href='/about.php'>About</a></li>
+            <li class='footer-list-item'><a href='/contact.php'>Contact</a></li>
+            <li class='footer-list-item'><a href=''>Privacy Policy</a></li>
+        </ul>
+        <div id='footer-logo-img'>
+            <a href="/index.php">
+                <img id='footer-logo' src='/img/logo.png' alt='logo_Gem_In_Eye'>
+            </a>
+        </div>
+        <div id='copyright'>Gem In Eye © 2022</div>
     </div>
-    <div id='copyright'>Gem In Eye © 2022</div>
 </footer>
