--- a/commons/footer.html
+++ b/commons/footer.html
@@ -4,7 +4,7 @@
             <li class='footer-list-item'><a href='/index.php'>Home</a></li>
             <li class='footer-list-item'><a href='/about.php'>About</a></li>
             <li class='footer-list-item'><a href='/contact.php'>Contact</a></li>
-            <li class='footer-list-item'><a href=''>Privacy Policy</a></li>
+            <li class='footer-list-item'><a href='/privacy_policy.php'>Privacy Policy</a></li>
         </ul>
         <div id='footer-logo-img'>
             <a href="/index.php">
